--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,24 @@
-********************Refactor************************
-Need to specify whether parse error is from parsing .tmd or .asm files
-eg
-    [x86 ASM Parse Error]
-    [TMD Parser Error]
+********************Redo************************
+Make fetch / store functions for x86 to get rid of repeated code (if/else to check for ints is annoying)
 
-Make fetch / load functions for x86 to get rid of repeated code (if/else to check for ints is annoying)
+void fetch(const std::string& dst, const std::string& src);
+void store(const std::string& dst, const std::string& src);
+
+Add constant folding for logical operators (<, >, <=, >=, ==, !=, and, or)
+
+
+****************Basic Blocks**********************
+Basic Blocks and Traces
+	Need a clearer reason to try this
+
 
 ***************Allocate registers*********************
+Need to make inference graph and do some node coloring
+
+
 Read lecture 16
 Read chapter in book
 K-coloring and allocate registers for x86
-Could also just assume no registers and push/pop everything for now
 
 ***************Optimization********************
 Compiler should accept flag to turn on/off optimizer
