--- a/todo.txt
+++ b/todo.txt
@@ -4,12 +4,13 @@ Make fetch / store functions for x86 to get rid of repeated code (if/else to che
 void fetch(const std::string& dst, const std::string& src);
 void store(const std::string& dst, const std::string& src);
 
-Add constant folding for logical operators (<, >, <=, >=, ==, !=, and, or)
-
+Set vimrc to have indents be 4 instead of 8
 
 ****************Basic Blocks**********************
 Basic Blocks and Traces
 	Need a clearer reason to try this
+
+Dead code elimination
 
 
 ***************Allocate registers*********************
