--- a/todo.txt
+++ b/todo.txt
@@ -14,11 +14,28 @@ m_target, m_opd1, and m_opd2 should be clear based on m_op
 
 ****************Basic Blocks**********************
 TEST!  Should be able to shuffle blocks, and use them to generate x86 code - the program output should be the same
-    as the unshuffled version
+    as the unshuffled version - just need to make sure we emit code for entry as usual
 
-eliminate dead code
-    If function is not called remove it (be careful not to remove 'main')
-    if no edges go to block, remove block or emit warning
+Implement this function in Optimizer:
+    opt.eliminate_dead_code(&cfg);
+
+    Black
+    Grey
+    White
+
+    mark all blocks as black (unreachable)
+    mark 'main' block as grey and put into working stack (grey is working set)
+    for each block in working set:
+        for each edge:
+            if current_block is src and dst is black, mark it gray and put dst block on stack
+        mark current_block as white (reachable)
+
+    black blocks will be unreachable, and can be eliminated during code generation
+
+Implement this function into Optmizer:
+    opt.collapse_blocks(&cfg);
+    for goto_cond, put false (or true) block directly afterwards (to make goto_ifz, essentially)
+    Is there any reason to choose the true or false branch?  Does size of regions/traces make a difference?
 
 Iterate through each block and assign registers
     analyze liveness of temps (true and local?)
