--- a/todo.txt
+++ b/todo.txt
@@ -1,36 +1,29 @@
 *******************Refactor********************
-Make tokens for tac code and use as m_op paramter
+Replace TokenType in Quad with TacT tokens
+    Bug with merge_adjcacent_store_fetch 
+        one test failing (if/else)
 
-TacT::Plus
-TacT::Minus
-TacT::Equal
-TacT::Goto
-TacT::CondGoto
-TacT::Return
-...
+    write print_tacs function to print out TAC
 
-Use these instead of those from token.hpp
-m_target, m_opd1, and m_opd2 should be clear based on m_op
+    Clean remaining confusing TacQuad stuff
 
 
-****************Basic Blocks**********************
-Look at dead_code_elimination function
-    trying to split into libraries and executable versions
-    but getting segmenation fault...
+Use double colons for declaring structs and functions
 
-    Recall that the goal is to eliminate unused functions in executable
-    but not in libraries (code without 'main' function) since
-    But unreachable intra-procedure code can be removed
+Rename filenames to match classnames...?
 
-Idea to solve dead code elimination problem:
-    dead code edges are unreachable blocks
-    dead function edges (made from calls) are unused functions
+******************arrays*************************
+main :: () -> int {
+    a: int = 9
+    b: int[4] = {0, 1, 3, 5}
+    b[0] = 5
+    c: int[100] = {0...0}
+    return b[0]
+}
 
-    Have two types of code elimination, one of unreachable code, and one for unused functions
-    Run both optimizations for executable (with main function)
-    Run only the unreachable code optimization for libararies (without main function)
+******************structs***********************
 
-
+*****************for loops*********************
 
 ***************Register Allocation**************
 Iterate through each block and assign registers
@@ -41,6 +34,12 @@ Iterate through each block and assign registers
 Iterate through allocated frame stack offsets for true/local temps and look for gaps
     if any stack offset has no true/local temps, decrement all true/local temps with higher offset to fill gap
 
+
+For a given BasicBlock, find all variables (should start with _t)
+For a given variable, find live range (if used on line n, the live range is {n-1, n})
+For two given variables, if no ranges are shared, they can share the same register
+Need an algorithm to assign variables to set number of registers
+
 myadd: (a: int, b: int) -> int {
     return a + b
 }
@@ -50,23 +49,6 @@ main: () -> int {
     z: int = x + y
     return z
 }
-
-
-    entry <alignment>
-myadd:
-    begin_fun 4
-    _t0 = a + b
-    return _t0
-    end_fun 
-main:
-    begin_fun 16
-    _t1x = 1 
-    _t2y = 5 
-    _t3 = _t1x + _t2y
-    _t4z = _t3 
-    return _t4z
-    end_fun 
-
 
 main:
     push    ebp
