--- a/todo.txt
+++ b/todo.txt
@@ -1,29 +1,64 @@
-*******************Refactor********************
-Replace TokenType in Quad with TacT tokens
-    Bug with merge_adjcacent_store_fetch 
-        one test failing (if/else)
+****************Refactor******************
+Replace C-style enum with type-safe C++ enum class
 
-    write print_tacs function to print out TAC
+****************print***********************
+assemble basic.asm into basic.obj
+create header files for basic.tmd with just function headers to import
+basic.tmd
 
-    Clean remaining confusing TacQuad stuff
+double colons for declaring static data (functions, structs, global variables)
+
+print::(a: int) -> nil {
+}
+print::(b: bool) -> nil {
+}
+
+can type information be saved in .obj file?
+    How does C know types when linking?
+    it would be better if we could save
+    type information directly in .obj and have linker do type checking
 
 
-Use double colons for declaring structs and functions
+******************arrays***********************
+b :: int = 23
 
-Rename filenames to match classnames...?
-
-******************arrays*************************
 main :: () -> int {
     a: int = 9
-    b: int[4] = {0, 1, 3, 5}
+    b: int[4] = {0, 1, 3, 5} //array with 4 numbers
     b[0] = 5
-    c: int[100] = {0...0}
+    c: int[100] = {0} //array of 100 zeros
+    d: int[20] = {13} //array with 20 13s
     return b[0]
 }
 
+**************string type**********************
+*may need to delay this until we can allocate memory
+s: string = "Hello world"
+
+len(s)
+s[re] = 
+
 ******************structs***********************
+Dog :: struct {
+    name: string,
+    age: int
+}
 
 *****************for loops*********************
+for i in 0..10 {
+    print(i)
+}
+
+0..10 produces a sequence of numbers, inclusive
+***************dynamic allocation***************
+    a: int* = alloc(224)
+    b: bool* = alloc(true)
+    c: Dog* = alloc("Mittens", 24)
+    [c].name = "Russell"
+    [c].age = 242
+    print([a])
+    free(a)
+    free(b)
 
 ***************Register Allocation**************
 Iterate through each block and assign registers
