--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,35 @@
+******************arrays***********************
+b :: int = 23
+
+main :: () -> int {
+    a: int = 9
+    b: int[4] = {0, 1, 3, 5} //array with 4 numbers
+    b[0] = 5
+    c: int[100] = {0} //array of 100 zeros
+    d: int[20] = {13} //array with 20 13s
+    return b[0]
+}
+
 ****************Refactor******************
 Replace C-style enum with type-safe C++ enum class
-    Also, have separate tokens for tmdParser and asmParser
+    Also, have separate tokens for tmdParser and asmParser to make it cleaner
 
-MemoryManager can go for now
+For assembling, parse and emit instructions at same time instead of making an entirely
+    new AST - will simplify quite a bit
 
 Add COLON_COLON token for static symbols
 
 **************What programs can I write with tamarind***********
-blockchain
-    gossip network
-        network support
-        hashing algorithms
-
 neural network
     feedforward to recognize MNIST dataset
         arrays
-        floating point
+        floating-point <---- this could be fun to implement
 
+
+blockchain
+    gossip network
+        network support - system calls to make 
+        hashing algorithms
 ****************print***********************
 assemble basic.asm into basic.obj
 create header files for basic.tmd with just function headers to import
@@ -34,18 +47,6 @@ can type information be saved in .obj file?
     it would be better if we could save
     type information directly in .obj and have linker do type checking
 
-
-******************arrays***********************
-b :: int = 23
-
-main :: () -> int {
-    a: int = 9
-    b: int[4] = {0, 1, 3, 5} //array with 4 numbers
-    b[0] = 5
-    c: int[100] = {0} //array of 100 zeros
-    d: int[20] = {13} //array with 20 13s
-    return b[0]
-}
 
 **************string type**********************
 *may need to delay this until we can allocate memory
